# chat-with-yt

./: .gitignore  main.py  pyproject.toml  test_audio.py  test_chunker.py  test_rag.py  test_transcript.py  test_vector_store.py  test_workflow.py
app/: main.py
core/: audio.py  chunker.py  rag.py  transcript.py  vector_store.py
