[project]
name = "chat-with-yt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiofiles>=25.1.0",
    "chromadb>=1.5.9",
    "fastapi>=0.137.1",
    "groq>=1.4.0",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.32",
    "sentence-transformers>=5.6.0",
    "sse-starlette>=3.4.4",
    "uvicorn>=0.49.0",
    "yt-dlp>=2026.6.9",
]
